Changed healthcheck URL to /
If we use /login, it generates a log in attempts log messages

--- a/templates/elkarbackup/0/rancher-compose.yml
+++ b/templates/elkarbackup/0/rancher-compose.yml
@@ -52,7 +52,7 @@ services:
       interval: 5000
       unhealthy_threshold: 3
       initializing_timeout: 60000
-      request_line: 'GET /login HTTP/1.0'
+      request_line: 'GET / HTTP/1.0'
       healthy_threshold: 2
       response_timeout: 5000 
       reinitializing_timeout: 60000
